# GitMemo

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  HANDOFF.md  README.md  README_CN.md  TODO.md
.github/workflows/: ci.yml  release.yml
deploy/: .env.local.example  DEPLOY-CN.md  sync-to-ecs.sh
deploy/nginx/conf.d/: gitmemo.conf
desktop/: CLAUDE.md  DESIGN.html  DESIGN.md  design-system.html  index.html  package.json  pnpm-lock.yaml  quick-paste.html  vite.config.ts
desktop/src/: App.tsx  QuickPaste.tsx  index.css  main.tsx  quick-paste.tsx  theme.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json  mobile.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  startup_skeleton.rs
desktop/src-tauri/src/commands/: clipboard.rs  crash_log.rs  favorites.rs  import.rs  init.rs  local_editor.rs  markdown.rs  mobile_git_spike.rs  mod.rs  notes.rs  notifications.rs  search.rs  settings.rs  skills.rs  stats.rs  sync_log.rs  vault.rs  watcher.rs
desktop/src-tauri/src/platform/: mod.rs
desktop/src/components/: AppHeaders.tsx  BottomNav.tsx  ClipboardPrivacyDialog.tsx  CopyPathButton.tsx  DesktopSplitPane.tsx  DetailIconButton.tsx  DropZone.tsx  ErrorBoundary.tsx  ExportPdfButton.tsx  FavoriteButton.tsx  FileDetailToolbar.tsx  FileMoreActionsMenu.tsx  Loading.tsx  MarkdownSplitEditor.tsx  MarkdownView.tsx  OnboardingChecklist.tsx  RevealInFinderButton.tsx  SetupWizard.tsx  Sidebar.tsx
desktop/src/components/base/: AppIcon.tsx  Badge.tsx  Button.tsx  CodeTextarea.tsx  EmptyState.tsx  Kbd.tsx  MonoBlock.tsx  Switch.tsx  useTimedIconSpin.ts
desktop/src/components/domain/ai-records/: aiRecordsLogic.ts
desktop/src/components/domain/app/: appChromeLogic.ts
desktop/src/components/domain/claude-config/: claudeConfigLogic.ts
desktop/src/components/domain/clipboard/: ClipboardComponents.tsx  clipboardLogic.ts
desktop/src/components/domain/conversations/: ConversationMessageCard.tsx  conversationsLogic.ts
desktop/src/components/domain/dashboard/: DashboardComponents.tsx  dashboardLogic.ts
desktop/src/components/domain/dropzone/: DropZoneComponents.tsx
desktop/src/components/domain/editor-home/: editorHomeLogic.ts
desktop/src/components/domain/external-files/: externalFilesLogic.ts
desktop/src/components/domain/favorites/: favoritesLogic.ts
desktop/src/components/domain/files/: ClipImageThumb.tsx  FileEditorSurface.tsx  FileListItem.tsx  FileWorkspace.tsx  (+6 more)
desktop/src/components/layout/: PageFrame.tsx  Pane.tsx
desktop/src/domain/cli/: cliStatus.ts
desktop/src/hooks/: useAppStore.ts  useAutoLoadMore.ts  useFileDetailState.ts  useFileEditorState.ts  useFileListNavigation.ts  useFileWatcher.ts  useI18n.tsx  useListNavigation.ts  useLongPressImageSave.ts  useMobileDetailBackHandler.ts  useMobileEditorChrome.ts  usePagedFileList.ts  usePlatform.ts  useResizablePanel.ts  useSync.tsx  useSyncState.ts  useTimedCopy.ts  useToast.tsx
desktop/src/locales/: en.json  zh.json
desktop/src/pages/: AiRecordsPage.tsx  ClaudeConfigPage.tsx  ClipboardPage.tsx  ConversationsPage.tsx  DashboardPage.tsx  EditorHomePage.tsx  ExternalFilesPage.tsx  FavoritesPage.tsx  ImportsPage.tsx  NotesPage.tsx  PlansPage.tsx  SearchPage.tsx  SettingsPage.tsx  VaultPage.tsx
desktop/src/types/: favorites.ts  files.ts  notes.ts
desktop/src/utils/: appNavigationLogic.ts  cliInstall.ts  clipboard.ts  controlCopyPaste.ts  localImages.ts  markdown.ts  mobileLayout.ts  notificationNavigation.ts  notify.ts  platformLogic.ts  shortcuts.ts  startupLogic.ts  time.ts
docs/: DATA-STATEMENT.md  dev-setup.md  product-design.md  product-hunt-launch.md  roadmap.md.bak  technical-architecture.md  windows-build.md  windows-remote-control.md  youtube-launch-copy.md
docs/design/: DESIGN.md  open-design-briefs.md
docs/design/prototypes/: setup-wizard.html
lan-control/: README.md  package.json  server.mjs
lan-control/scripts/: bootstrap_windows_ssh.ps1
plugins/gitmemo/: README.md
plugins/gitmemo/.claude-plugin/: plugin.json
scripts/: bootstrap_windows_ssh.ps1  build_android_arm64.sh  build_windows_desktop.ps1  create_windows_ssh_key.sh  detect_release_changes.py  install.sh  install_windows_build_env.ps1  run-python.mjs  start_windows_pairing_server.mjs  sync_desktop_version.py  sync_release_assets_to_oss.py  sync_website_assets_to_oss.py  windows_remote_build.sh  write_cli_latest_json.py  write_latest_json.py
skills/gitmemo/: SKILL.md
skills/save/: SKILL.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/commands/: common.rs  init.rs  mod.rs  notes.rs  search.rs  status.rs  sync.rs  upgrade.rs
src/inject/: claude_md.rs  cursor_mcp.rs  cursor_rules.rs  mcp_register.rs  mod.rs  session_log_skill.rs  settings_hook.rs
src/mcp/: server.rs
src/platform/: mod.rs
src/services/: capture.rs  mod.rs  notes.rs  search.rs  secrets.rs  startup.rs  sync.rs
src/storage/: capture.rs  database.rs  files.rs  git.rs
src/utils/: config.rs  datetime.rs  frontmatter.rs  i18n.rs  mod.rs  sanitize.rs  ssh.rs  title.rs
src/utils/i18n/: en.toml  zh.toml
website/: DESIGN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
website/public/: llms.txt  sitemap.xml
website/public/docs/: android.md  downloads.md  facts.json  install.md  mcp.md  overview.md  readme-en.md  readme-zh.md  sync.md
website/scripts/: generate-llm-docs.mjs  prerender.mjs
website/src/: App.tsx  RootPage.tsx  entry-server.tsx  index.css  main.tsx  theme-context.ts  theme.tsx  useTheme.ts
website/src/components/: FadeIn.tsx  FeatureCard.tsx  Terminal.tsx
website/src/i18n/: context.ts  index.tsx  useI18n.ts
website/src/pages/: ReadmeMarkdown.tsx  ReadmePage.tsx
website/src/sections/: CapabilityMatrix.tsx  Comparison.tsx  CoreArchitecture.tsx  DesktopApp.tsx  DownloadClients.tsx  Downloads.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  MobileApp.tsx  PainPoints.tsx  QuickStart.tsx  ScenarioShowcase.tsx  TopNav.tsx  WhatGetsCaptured.tsx  WhyAiEra.tsx
(+15 files in other folders)
