[package]
name = "gitmemo-desktop"
version = "0.1.0"
description = "GitMemo Desktop - Your AI knowledge, always in Git"
authors = ["GitMemo Team"]
edition = "2021"

[lib]
name = "gitmemo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

# Clipboard reading (native, no subprocess)
arboard = "3"

# Image encoding for clipboard image capture
image = { version = "0.25", default-features = false, features = ["png"] }

# Core library (reuse gitmemo logic)
gitmemo_core = { path = "../..", package = "gitmemo" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# File system
walkdir = "2"

# Hash
sha2 = "0.10"

# Base64 encoding for image file reading
base64 = "0.22"

# Config
toml = "0.8"

# File watching (for clipboard & file change events)
notify = { version = "7", features = ["macos_kqueue"] }
