[package]
name = "gitmemo-desktop"

version = "1.0.18"
description = "GitMemo Desktop - Your AI knowledge, always in Git"
authors = ["GitMemo Team"]
edition = "2021"

[lib]
name = "gitmemo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon"]

[dependencies]
# Tauri (base — no tray-icon; desktop feature adds it)
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Core library (reuse gitmemo logic)
gitmemo_core = { path = "../..", package = "gitmemo" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
tauri-plugin-log = "2"

# File system
walkdir = "2"

# Hash
sha2 = "0.10"

# Base64 encoding for image file reading
base64 = "0.22"

# Config
toml = "0.8"
url = "2"

# ── Desktop-only dependencies ──
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = { version = "7", features = ["macos_kqueue"] }

# macOS: read clipboard on the main thread
[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
