[package]
name = "gitmemo-desktop"

version = "1.0.140"
description = "GitMemo Desktop - Local-first Git-native personal knowledge capture"
authors = ["GitMemo Team"]
edition = "2021"

[lib]
name = "gitmemo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon"]

[dependencies]
# Tauri (base — no tray-icon; desktop feature adds it)
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Core library (reuse gitmemo logic)
gitmemo_core = { path = "../..", package = "gitmemo" }
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
tauri-plugin-log = "2"

# File system
walkdir = "2"

# Hash
sha2 = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }

# Base64 encoding for image file reading
base64 = "0.22"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }

# Config
toml = "0.8"
url = "2"

# Android media store bridge
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# ── Desktop-only dependencies ──
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "7"

# macOS: read clipboard on the main thread
[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
mac-notification-sys = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "objc2-core-graphics", "objc2-quartz-core", "NSBox", "NSCell", "NSColor", "NSControl", "NSFont", "NSGraphics", "NSProgressIndicator", "NSResponder", "NSTextField", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSObject", "NSString", "NSUserNotification", "NSObjCRuntime", "NSGeometry", "objc2-core-foundation"] }
objc2-quartz-core = { version = "0.3", default-features = false, features = ["CAAnimation", "CALayer", "CAMediaTiming", "CAMediaTimingFunction", "objc2-core-foundation", "objc2-core-graphics"] }
